--- a/style.css
+++ b/style.css
@@ -5,17 +5,16 @@
 .div1 {
     width: 300px;
     height: 200px;
-    background-color: darkcyan;
 }
 
 body {
-    background-color: #eee;
+		background-image: url("paper_1.png");
 }
 
 nav {
     width: 100%;
     height: 100px;
-    background-color: #fff;
+    background-color: #eee;
 }
 
 ul {
