--- a/style.css
+++ b/style.css
@@ -13,25 +13,32 @@ body {
 
 nav {
     width: 100%;
-    height: 100px;
-    background-color: #eee;
+    height: 50px;
+    background-color: #333;
 }
 
 ul {
-    margin-left: 60px;
+		list-style-type: none;
+		margin: 0;
+		padding: 0;
+		overflow: hidden;
+    margin-left: 30px;
 }
 
-ul li {
-    list-style: none;
-    display: inline-block;
-    line-height: 100px;
+li {
+		float: left;
 }
 
-ul li a{
+li a{
     display: block;
     text-decoration: none;
-    font-size: 14px;
-    font-family: arial;
-    color: #1e1e1e;
-    padding: 0 20px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+}
+li a:hover {
+	background color: #111;
+}
+.active {
+	background-color: #99c522;
 }
