Made the NFL switch invisible for the time being since we have not implemented NFL optimization yet

--- a/DFOptimizerApp/app/src/main/res/layout/activity_choose_sport.xml
+++ b/DFOptimizerApp/app/src/main/res/layout/activity_choose_sport.xml
@@ -37,6 +37,7 @@
         android:layout_height="51dp"
         android:layout_marginBottom="81dp"
         android:text="NFL"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/continueBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
