--- a/DFOptimizerApp/app/src/main/res/layout/activity_login.xml
+++ b/DFOptimizerApp/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
         android:layout_marginBottom="35dp"
         android:autofillHints=""
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:text="@string/password"
         app:layout_constraintBottom_toTopOf="@+id/login"
         app:layout_constraintStart_toStartOf="@+id/email_login"
