--- a/DFOptimizerApp/app/src/main/res/layout/activity_register.xml
+++ b/DFOptimizerApp/app/src/main/res/layout/activity_register.xml
@@ -6,63 +6,93 @@
     android:layout_height="match_parent"
     tools:context=".Register">
 
+
+    <TextView
+        android:id="@+id/emailAddressTextView"
+        android:layout_width="214dp"
+        android:layout_height="38dp"
+        android:layout_marginBottom="27dp"
+        android:text="Email Address"
+        app:layout_constraintBottom_toTopOf="@+id/passwordTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fullName_register" />
+
     <TextView
         android:id="@+id/createText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
+        android:layout_marginStart="39dp"
+        android:layout_marginLeft="39dp"
         android:layout_marginTop="70dp"
+        android:layout_marginBottom="50dp"
         android:text="Create New Account"
+        app:layout_constraintBottom_toTopOf="@+id/fullName_register"
         app:layout_constraintStart_toStartOf="@+id/fullName_register"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/fullName_register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
-        android:layout_marginBottom="11dp"
+        android:layout_width="220dp"
+        android:layout_height="59dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginLeft="84dp"
+        android:layout_marginBottom="23dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Full Name"
-        app:layout_constraintBottom_toTopOf="@+id/email_register"
-        app:layout_constraintEnd_toEndOf="@+id/email_register" />
+        android:text=""
+        app:layout_constraintBottom_toTopOf="@+id/emailAddressTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/createText" />
 
     <EditText
         android:id="@+id/email_register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="194dp"
+        android:layout_width="220dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginLeft="84dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Email Address"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text=""
+        app:layout_constraintBottom_toBottomOf="@+id/emailAddressTextView"
+        app:layout_constraintEnd_toEndOf="@+id/emailAddressTextView"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/password_register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_width="220dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginLeft="84dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
         android:ems="10"
         android:inputType="textPassword"
-        android:text="Password"
-        app:layout_constraintStart_toStartOf="@+id/email_register"
-        app:layout_constraintTop_toBottomOf="@+id/email_register" />
+        android:text=""
+        app:layout_constraintBottom_toBottomOf="@+id/passwordTextView"
+        app:layout_constraintEnd_toEndOf="@+id/passwordTextView"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/confirmPass_register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="9dp"
+        android:layout_width="220dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginLeft="84dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
         android:ems="10"
         android:inputType="textPassword"
-        android:text="Confirm Password"
-        app:layout_constraintStart_toStartOf="@+id/password_register"
-        app:layout_constraintTop_toBottomOf="@+id/password_register" />
+        android:text=""
+        app:layout_constraintEnd_toEndOf="@+id/confirmPasswordTextView"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />
 
     <Button
         android:id="@+id/registerBtn"
@@ -72,7 +102,8 @@
         android:text="Register"
         app:layout_constraintBottom_toTopOf="@+id/existingUser"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTextView" />
 
     <TextView
         android:id="@+id/existingUser"
@@ -82,5 +113,44 @@
         android:text="Already Registered? Login Here"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/registerBtn" />
+
+    <TextView
+        android:id="@+id/fullNameText"
+        android:layout_width="187dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="23dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginBottom="49dp"
+        android:text="Full Name"
+        app:layout_constraintBottom_toTopOf="@+id/emailAddressTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/emailAddressTextView"
+        app:layout_constraintTop_toBottomOf="@+id/fullName_register"
+        app:layout_constraintVertical_bias="0.583" />
+
+    <TextView
+        android:id="@+id/passwordTextView"
+        android:layout_width="210dp"
+        android:layout_height="33dp"
+        android:layout_marginBottom="17dp"
+        android:text="Password"
+        app:layout_constraintBottom_toTopOf="@+id/confirmPasswordTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emailAddressTextView" />
+
+    <TextView
+        android:id="@+id/confirmPasswordTextView"
+        android:layout_width="210dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="24dp"
+        android:text="Confirm Password"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
