Updated fields for Login page so labels are underneath the fields and the label disappears when user starts typing. Need to fix issue of label not re-appearing when field is empty (after backspace).

--- a/DFOptimizerApp/app/src/main/res/layout/activity_login.xml
+++ b/DFOptimizerApp/app/src/main/res/layout/activity_login.xml
@@ -11,26 +11,28 @@
         android:id="@+id/email_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="96dp"
+        android:layout_marginRight="96dp"
+        android:layout_marginBottom="10dp"
         android:autofillHints=""
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/email_address"
+        android:text=""
         app:layout_constraintBottom_toTopOf="@+id/password_login"
-        app:layout_constraintEnd_toEndOf="@+id/textView4"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <EditText
         android:id="@+id/password_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="35dp"
         android:autofillHints=""
         android:ems="10"
         android:inputType="textPassword"
-        android:text="@string/password"
+        android:text=""
         app:layout_constraintBottom_toTopOf="@+id/login"
         app:layout_constraintStart_toStartOf="@+id/email_login"
         app:layout_constraintTop_toBottomOf="@+id/email_login" />
@@ -61,7 +63,7 @@
     <TextView
         android:id="@+id/newUser"
         android:layout_width="177dp"
-        android:layout_height="30dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="37dp"
         android:text="New Here? Create Account"
         app:layout_constraintBottom_toTopOf="@+id/progressBar"
@@ -74,12 +76,38 @@
         android:layout_width="192dp"
         android:layout_height="35dp"
         android:layout_marginTop="83dp"
-        android:layout_marginEnd="90dp"
-        android:layout_marginRight="90dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="89dp"
+        android:layout_marginRight="89dp"
+        android:layout_marginBottom="33dp"
         android:text="User Login"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/email_login"
+        app:layout_constraintBottom_toTopOf="@+id/loginEmailLabel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/loginEmailLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="116dp"
+        android:layout_marginLeft="116dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="50dp"
+        android:text="Email"
+        app:layout_constraintBottom_toTopOf="@+id/loginPasswordLabel"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+    <TextView
+        android:id="@+id/loginPasswordLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="116dp"
+        android:layout_marginLeft="116dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="500dp"
+        android:text="Password"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loginEmailLabel" />
 </androidx.constraintlayout.widget.ConstraintLayout>
