--- a/DFOptimizerApp/app/src/main/res/layout/activity_list_players.xml
+++ b/DFOptimizerApp/app/src/main/res/layout/activity_list_players.xml
@@ -51,7 +51,7 @@
         android:layout_marginEnd="33dp"
         android:layout_marginRight="33dp"
         android:layout_marginBottom="53dp"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/positionFilter"
         app:layout_constraintEnd_toStartOf="@+id/remainingSalaryTxt"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,7 +80,7 @@
         android:layout_marginEnd="6dp"
         android:layout_marginRight="6dp"
         android:layout_marginBottom="21dp"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/playerListView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
