--- a/DFOptimizerApp/app/src/main/res/layout/activity_list_players.xml
+++ b/DFOptimizerApp/app/src/main/res/layout/activity_list_players.xml
@@ -8,9 +8,9 @@
     <TextView
         android:id="@+id/instructionTxt"
         android:layout_width="390dp"
-        android:layout_height="51dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginBottom="3dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="61dp"
+        android:layout_marginBottom="2dp"
         android:text="Here are the players who are available today. Choose any four that you would like to include in your lineup."
         app:layout_constraintBottom_toTopOf="@+id/remainingSalaryTxt"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,23 +19,27 @@
     <Button
         android:id="@+id/continueBtn"
         android:layout_width="105dp"
-        android:layout_height="42dp"
-        android:layout_marginBottom="50dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="79dp"
+        android:layout_marginLeft="79dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginBottom="51dp"
         android:text="Continue"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/clearPlayers"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/playerListView" />
 
     <ListView
         android:id="@+id/playerListView"
-        android:layout_width="380dp"
-        android:layout_height="390dp"
-        android:layout_marginStart="3dp"
-        android:layout_marginLeft="3dp"
-        android:layout_marginEnd="3dp"
-        android:layout_marginRight="3dp"
-        android:layout_marginBottom="22dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="24dp"
         app:layout_constraintBottom_toTopOf="@+id/continueBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,28 +47,25 @@
 
     <SearchView
         android:id="@+id/searchView"
-        android:layout_width="246dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="6dp"
-        android:layout_marginLeft="6dp"
-        android:layout_marginTop="53dp"
-        android:layout_marginEnd="33dp"
-        android:layout_marginRight="33dp"
-        android:layout_marginBottom="53dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="27dp"
+        android:layout_marginRight="27dp"
+        android:layout_marginBottom="11dp"
         android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="@+id/positionFilter"
+        app:layout_constraintBottom_toTopOf="@+id/positionFilter"
         app:layout_constraintEnd_toStartOf="@+id/remainingSalaryTxt"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/instructionTxt"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/instructionTxt" />
 
     <TextView
         android:id="@+id/remainingSalaryTxt"
-        android:layout_width="116dp"
-        android:layout_height="54dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginRight="28dp"
-        android:layout_marginBottom="11dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginRight="22dp"
+        android:layout_marginBottom="13dp"
         android:text="Rem. Salary: $60000"
         app:layout_constraintBottom_toTopOf="@+id/positionFilter"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,16 +74,28 @@
 
     <Spinner
         android:id="@+id/positionFilter"
-        android:layout_width="332dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="6dp"
-        android:layout_marginLeft="6dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginRight="6dp"
-        android:layout_marginBottom="21dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="39dp"
+        android:layout_marginLeft="39dp"
+        android:layout_marginEnd="39dp"
+        android:layout_marginRight="39dp"
+        android:layout_marginBottom="22dp"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/playerListView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/remainingSalaryTxt" />
+
+    <Button
+        android:id="@+id/clearPlayers"
+        android:layout_width="0dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="22dp"
+        android:layout_marginEnd="90dp"
+        android:layout_marginRight="90dp"
+        android:text="Clear All"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/continueBtn"
+        app:layout_constraintTop_toBottomOf="@+id/playerListView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
