--- a/DFOptimizerApp/app/src/main/res/layout/activity_login.xml
+++ b/DFOptimizerApp/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray"
     tools:context=".Login">
+
 
 
     <EditText
@@ -19,6 +21,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text=""
+        android:backgroundTint="#ffffff"
         app:layout_constraintBottom_toTopOf="@+id/password_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
@@ -31,8 +34,10 @@
         android:layout_marginBottom="35dp"
         android:autofillHints=""
         android:ems="10"
+        android:backgroundTint="#ffffff"
         android:inputType="textPassword"
         android:text=""
+
         app:layout_constraintBottom_toTopOf="@+id/login"
         app:layout_constraintStart_toStartOf="@+id/email_login"
         app:layout_constraintTop_toBottomOf="@+id/email_login" />
@@ -66,6 +71,7 @@
         android:layout_height="35dp"
         android:layout_marginBottom="37dp"
         android:text="New Here? Create Account"
+        android:textColor="#ffffff"
         app:layout_constraintBottom_toTopOf="@+id/progressBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,6 +86,7 @@
         android:layout_marginRight="89dp"
         android:layout_marginBottom="33dp"
         android:text="User Login"
+        android:textColor="#ffffff"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/loginEmailLabel"
         app:layout_constraintEnd_toEndOf="parent"
@@ -94,6 +101,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginBottom="50dp"
         android:text="Email"
+        android:textColor="#ffffff"
         app:layout_constraintBottom_toTopOf="@+id/loginPasswordLabel"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
@@ -107,7 +115,22 @@
         android:layout_marginTop="40dp"
         android:layout_marginBottom="500dp"
         android:text="Password"
+        android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginEmailLabel" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="301dp"
+        android:layout_height="563dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginEnd="55dp"
+        android:layout_marginRight="55dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/email_login"
+        app:srcCompat="@drawable/logo" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
