more UI graphical updates, working out a good theme for the app. More to come

--- a/DFOptimizerApp/app/src/main/res/layout/activity_login.xml
+++ b/DFOptimizerApp/app/src/main/res/layout/activity_login.xml
@@ -48,6 +48,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="17dp"
         android:text="@string/login"
+        android:textColor="#333333"
+        android:backgroundTint="#4ab9f5"
+        android:background="@drawable/custom_rounded_corners"
         app:layout_constraintBottom_toTopOf="@+id/newUser"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +90,8 @@
         android:layout_marginBottom="33dp"
         android:text="User Login"
         android:textColor="#ffffff"
-        android:textSize="24sp"
+        android:fontFamily="@font/klaptbold"
+        android:textSize="32sp"
         app:layout_constraintBottom_toTopOf="@+id/loginEmailLabel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
