--- a/DFOptimizerApp/app/src/main/res/values/colors.xml
+++ b/DFOptimizerApp/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimary">#333333</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#555555</color>
     <color name="lime_yellow">#FFFFEE</color>
     <color name="gray">#333333</color>
 </resources>
