--- a/DFOptimizerApp/app/src/main/res/layout/activity_list_players.xml
+++ b/DFOptimizerApp/app/src/main/res/layout/activity_list_players.xml
@@ -24,6 +24,7 @@
         android:layout_height="47dp"
         android:layout_marginStart="79dp"
         android:layout_marginLeft="79dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:layout_marginBottom="51dp"
@@ -42,6 +43,7 @@
         android:layout_marginEnd="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginBottom="24dp"
+        android:scrollbars="vertical"
         app:layout_constraintBottom_toTopOf="@+id/continueBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -96,8 +98,11 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="90dp"
         android:layout_marginRight="90dp"
+        android:layout_marginBottom="51dp"
         android:text="Clear All"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/continueBtn"
-        app:layout_constraintTop_toBottomOf="@+id/playerListView" />
+        app:layout_constraintTop_toBottomOf="@+id/playerListView"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
