--- a/DFOptimizerApp/app/src/main/res/layout/activity_choose_sport.xml
+++ b/DFOptimizerApp/app/src/main/res/layout/activity_choose_sport.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/gray"
     tools:context=".ChooseSport">
 
     <Switch
@@ -14,6 +15,7 @@
         android:layout_marginBottom="137dp"
         android:text="MLB"
         android:visibility="visible"
+        android:textColor="#ffffff"
         app:layout_constraintBottom_toTopOf="@+id/continueBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,6 +28,8 @@
         android:layout_marginTop="70dp"
         android:layout_marginBottom="71dp"
         android:text="Select a Sport "
+        android:textColor="#ffffff"
+        android:backgroundTint="#4ab9f5"
         app:layout_constraintBottom_toTopOf="@+id/nbaSwitch"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,6 +41,7 @@
         android:layout_height="0dp"
         android:layout_marginBottom="9dp"
         android:text="NBA"
+        android:textColor="#ffffff"
         app:layout_constraintBottom_toTopOf="@+id/nflSwitch"
         app:layout_constraintEnd_toEndOf="@+id/nflSwitch"
         app:layout_constraintStart_toStartOf="@+id/nflSwitch"
@@ -49,6 +54,8 @@
         android:layout_marginBottom="9dp"
         android:text="NFL"
         android:visibility="visible"
+        android:textColor="#ffffff"
+        android:backgroundTint="#4ab9f5"
         app:layout_constraintBottom_toTopOf="@+id/mlbSwitch"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,6 +66,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="214dp"
+        android:textColor="#333333"
+        android:backgroundTint="#4ab9f5"
         android:text="Continue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
