--- a/DFOptimizerApp/app/src/main/res/layout/activity_http_connect.xml
+++ b/DFOptimizerApp/app/src/main/res/layout/activity_http_connect.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray"
     tools:context=".HttpConnect">
 
 
@@ -20,6 +21,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="177dp"
         android:layout_marginBottom="44dp"
+        android:textColor="#333333"
+        android:backgroundTint="#4ab9f5"
         android:text="Generate Optimized Lineup"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,6 +38,7 @@
         android:layout_marginEnd="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginBottom="35dp"
+        android:textColor="#ffffff"
         android:text="View Optimized Lineup Here"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
