--- a/DFOptimizerApp/app/src/main/res/layout/activity_display_lineups.xml
+++ b/DFOptimizerApp/app/src/main/res/layout/activity_display_lineups.xml
@@ -5,17 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray"
-    tools:context=".DisplayLineups"><![CDATA[
-
-
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    tools:context=".DisplayLineups"
     android:orientation="vertical"
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="196dp">
 
-
-    ]]>
 
     <Button
         android:id="@+id/httpBut"
